Desarrollo de autenticación de la API
Creación del método de autenticación e implementación de una
autorización básica con el uso del estándar OAuth 2.0, como se puede ver
en el endpoint para crear nuevos proyectos. Se agregan configuraciones
relevantes al archivo de configuración y el archivo .env, estableciendo
las dependencias necesarias y con el correcto manejo de los token de
acceso JWT en las diferentes nuevas partes del código.

--- a/app/.env.example
+++ b/app/.env.example
@@ -4,6 +4,9 @@ POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=plataforma-crowdfunding
 
+SECRET_KEY=super-secret
+ACCESS_TOKEN_EXPIRE_MINUTES=1140 # 24 Horas
+
 #SERVER_APP=main:app
 #SERVER_HOSTstr=127.0.0.1
 #SERVER_PORT=8000
